# sam2_ros_tracking

./: README.md
docker/: build.sh  owl.docker_container  ros2_setup.sh  run.sh
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/srv/: OwlInference.srv  OwlInferenceM.srv  Sam2Inference.srv
vision_utils/: package.xml  setup.cfg  setup.py
vision_utils/launch/: owl_infer.launch.py
vision_utils/launch/config/: owl_config.yaml
vision_utils/vision_utils/: owl_inference.py  sam2_bbox_selector.py  sam2_inference.py  utils.py
